--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     </div>
     <div class="popup">
         <div class="popup__container">
-            <div class="popup__close-icon"></div>
             <h2 class="popup__title">Редактировать профиль</h2>
+            <div class="popup__close-icon">
+            </div>
             <form class="popup__form">
                 <input type="text" class="popup__input" name="name">
                 <input type="text" class="popup__input" name="job">
