--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
                             </div>
+                        </div>
                     </li>
                     <li class="elements__list-item"><img src="../mesto/image/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
@@ -40,6 +41,7 @@
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
                             </div>
+                        </div>
                     </li>
                     <li class="elements__list-item"><img src="../mesto/image/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
@@ -47,6 +49,7 @@
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
                             </div>
+                        </div>
                     </li>
                     <li class="elements__list-item"><img src="../mesto/image/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
@@ -54,12 +57,15 @@
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
                             </div>
+                        </div>
                     </li>
                     <li class="elements__list-item"><img src="../mesto/image/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
+                            </div>
+                        </div>
                     </li>
                     <li class="elements__list-item"><img src="../mesto/image/karachaevsk.jpg" alt="Фото Карачавска">
                         <div class="elements__container">
@@ -67,6 +73,7 @@
                             <div class="elements__like-container">
                                 <img src="./image/Vector2.png" alt="Сердце">
                             </div>
+                        </div>
                     </li>
                 </ul>
             </section>
