--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
             <section class="elements">
                 <ul class="elements__list">
-                    <li class="elements__list-item"><img src="../mesto/image/karachaevsk.jpg" alt="Фото Карачавска">
+                    <li class="elements__list-item"><img src="./image/karachaevsk.jpg" alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
                             <div class="elements__like-container">
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="../mesto/image/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img src="./image/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
                             <div class="elements__like-container">
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="../mesto/image/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img src="./image/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
                             <div class="elements__like-container">
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="../mesto/image/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img src="./image/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
                             <div class="elements__like-container">
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="../mesto/image/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img src="./image/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
                             <div class="elements__like-container">
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="../mesto/image/karachaevsk.jpg" alt="Фото Карачавска">
+                    <li class="elements__list-item"><img src="./image/karachaevsk.jpg" alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
                             <div class="elements__like-container">
