--- a/index.html
+++ b/index.html
@@ -12,67 +12,56 @@
 <body class="page">
     <div class="page__container">
         <header class="header">
-            <img class="header__logo" alt="Логотип" src="./image/Vector.png">
+            <img class="header__logo" alt="Логотип" src="./images/Vector1.svg">
         </header>
         <main class="content">
             <section class="profile">
-                <div class="profile__avatar-edit"><img class="profile__avatar" src="./image/kusto.jpg" alt="Фото Кусто">
+                <div class="profile__avatar-edit"><img class="profile__avatar" src="./images/kusto.jpg"
+                        alt="Фото Кусто">
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив-Кусто</h1>
                     <p class="profile__job">Исследователь океана</p>
-                    <button class="profile__edit-button"></button>
+                    <button type="button" class="profile__edit-button"></button>
                 </div>
-                <button class="profile__add-button"></button>
+                <button type="button" class="profile__add-button"></button>
             </section>
             <section class="elements">
                 <ul class="elements__list">
-                    <li class="elements__list-item"><img src="./image/karachaevsk.jpg" alt="Фото Карачаевска">
+                    <li class="elements__list-item"><img src="./images/karachaevsk.jpg" alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./image/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img src="./images/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./image/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img src="./images/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./image/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img src="./images/albrus.png" alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./image/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img src="./images/dombay.jpg" alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./image/karachaevsk.jpg" alt="Фото Карачаевска">
+                    <li class="elements__list-item"><img src="./images/karachaevsk.jpg" alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
-                            <div class="elements__like-container">
-                                <img src="./image/Vector2.png" alt="Сердце">
-                            </div>
+                            <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
                 </ul>
@@ -85,16 +74,15 @@
     <div class="popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <div class="popup__close-icon">
-            </div>
-            <form class="popup__form">
+            <button type="button" class="popup__close-icon"></button>
+            <form name="edit" class="popup__form">
                 <input type="text" class="popup__input" name="name">
                 <input type="text" class="popup__input" name="job">
                 <button type="submit" class="popup__button">Сохранить</button>
             </form>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./script/index.js"></script>
 </body>
 
 </html>
