--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main class="content">
             <section class="profile">
                 <div class="profile__avatar-edit"><img class="profile__avatar" src="./images/kusto.jpg"
-                        alt="Фото Кусто">
+                        alt="Аватар пользователя">
                 </div>
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив-Кусто</h1>
