--- a/index.html
+++ b/index.html
@@ -28,37 +28,43 @@
             </section>
             <section class="elements">
                 <ul class="elements__list">
-                    <li class="elements__list-item"><img src="./images/karachaevsk.jpg" alt="Фото Карачаевска">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/karachaevsk.jpg"
+                            alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
                             <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./images/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/albrus.png"
+                            alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
                             <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./images/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/dombay.jpg"
+                            alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
                             <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./images/albrus.png" alt="Фото Эльбруса">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/albrus.png"
+                            alt="Фото Эльбруса">
                         <div class="elements__container">
                             <h2 class="elements__text">Гора Эльбрус</h2>
                             <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./images/dombay.jpg" alt="Фото Домбай">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/dombay.jpg"
+                            alt="Фото Домбай">
                         <div class="elements__container">
                             <h2 class="elements__text">Домбай</h2>
                             <button type="button" class="elements__like-container"></button>
                         </div>
                     </li>
-                    <li class="elements__list-item"><img src="./images/karachaevsk.jpg" alt="Фото Карачаевска">
+                    <li class="elements__list-item"><img class="elements__image" src="./images/karachaevsk.jpg"
+                            alt="Фото Карачаевска">
                         <div class="elements__container">
                             <h2 class="elements__text">Карачаевск</h2>
                             <button type="button" class="elements__like-container"></button>
