--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="footer__author">&copy;2022 Кипятков Сергей</p>
         </footer>
     </div>
-    <div class="popup">
+    <div class="popup popup_edit-card">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
             <button type="button" class="popup__close-icon"></button>
@@ -58,12 +58,24 @@
     </div>
     <div class="popup popup-image">
         <div class="popup-image__container">
-            <div class="popup-image__close"></div>
+            <button type="button" class="popup__close-icon"></button>
             <img class="popup-image__image"
                 src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="рисунок">
             <div class="popup-image__title"></div>
         </div>
     </div>
+    <template class="card-template">
+        <li class="elements__list-item">
+            <img class="elements__image" alt="image">
+            <div class="elements__remove"></div>
+            <div class="elements__container">
+                <h2 class="elements__text"></h2>
+                <button class="elements__like-container"></button>
+            </div>
+        </li>
+    </template>
+    <script src="./script/const.js"></script>
+    <script src="./script/cards.js"></script>
     <script src="./script/index.js"></script>
 </body>
 
