--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <script src="./script/const.js"></script>
     <script src="./script/cards.js"></script>
     <script src="./script/index.js"></script>
+    <script src="./script/validate.js"></script>
 </body>
 
 </html>
