--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <button type="button" class="popup__close-icon"></button>
             <form name="edit" class="popup__form">
-                <input type="text" class="popup__input" name="name">
-                <input type="text" class="popup__input" name="job">
+                <div class="popup__input-wrap">
+                    <input type="text" class="popup__input" name="name" required minlength="2" maxlength="40">
+                    <div class="popup__error"></div>
+                </div>
+                <div class="popup__input-wrap">
+                    <input type="text" class="popup__input" name="job" required minlength="2" maxlength="200">
+                    <div class="popup__error"></div>
+                </div>
+
                 <button type="submit" class="popup__button">Сохранить</button>
+
             </form>
         </div>
     </div>
@@ -50,8 +58,14 @@
             <h2 class="popup__title">Новое место</h2>
             <button type="button" class="popup__close-icon"></button>
             <form name="edit" class="popup__form">
-                <input type="text" class="popup__input" name="name">
-                <input type="text" class="popup__input" name="link">
+                <div class="popup__input-wrap">
+                    <input type="text" class="popup__input" name="name" required minlength="2" maxlength="40">
+                    <div class="popup__error"></div>
+                </div>
+                <div class="popup__input-wrap">
+                    <input type="text" class="popup__input" name="link" required pattern="^https?\/\/w+\/w+\/">
+                    <div class="popup__error"></div>
+                </div>
                 <button type="submit" class="popup__button">Создать</button>
             </form>
         </div>
