--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <button type="button" class="popup__close-icon"></button>
             <form name="edit" class="popup__form">
                 <div class="popup__input-wrap">
-                    <input type="text" class="popup__input" name="name" required minlength="2" maxlength="40">
+                    <input type="text" class="popup__input" name="name" placeholder="Имя" required minlength="2"
+                        maxlength="40">
                     <div class="popup__error"></div>
                 </div>
                 <div class="popup__input-wrap">
-                    <input type="text" class="popup__input" name="job" required minlength="2" maxlength="200">
+                    <input type="text" class="popup__input" name="job" placeholder="Вид деятельности" required
+                        minlength="2" maxlength="200">
                     <div class="popup__error"></div>
                 </div>
-
                 <button type="submit" class="popup__button">Сохранить</button>
-
             </form>
         </div>
     </div>
