--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </template>
     <script src="./script/const.js"></script>
     <script src="./script/cards.js"></script>
-    <script src="./script/index.js"></script>
-    <script src="./script/validate.js"></script>
+    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./script/validate.js"></script>
 </body>
 
 </html>
