--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
     <div class="popup popup-image">
         <div class="popup-image__container">
             <button type="button" class="popup__close-icon"></button>
-            <img class="popup-image__image"
-                src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="рисунок">
+            <div class="popup-image__image"
+                style="background-image: url(https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg)">
+            </div>
             <div class="popup-image__title"></div>
         </div>
     </div>
@@ -93,7 +94,6 @@
     <script src="./script/const.js"></script>
     <script src="./script/cards.js"></script>
     <script type="module" src="./script/index.js"></script>
-    <script type="module" src="./script/validate.js"></script>
 </body>
 
 </html>
