--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="popup__input-wrap">
                     <input type="text" class="popup__input" name="link" placeholder="Ссылка на картинку" required
-                        pattern="^https?:\/\/(\w+)(\.(\w+))+.+?">
+                        pattern="^https?:\/\/([\w-]+\.)+(\w+).+?">
                     <div class="popup__error"></div>
                 </div>
                 <button type="submit" class="popup__button">Создать</button>
@@ -80,13 +80,37 @@
             <div class="popup-image__title"></div>
         </div>
     </div>
+    <div class="popup popup-remove">
+        <div class="popup__container">
+            <button type="button" class="popup__close-icon"></button>
+            <div class="popup__title">Вы уверены?</div>
+            <button type="submit" class="popup__button popup-remove__button">Да</button>
+        </div>
+    </div>
+    <div class="popup popup-edit-avatar">
+        <div class="popup__container">
+            <button type="button" class="popup__close-icon"></button>
+            <div class="popup__title">Обновить аватар</div>
+            <form name="editAvatarForm" class="popup__form">
+                <div class="popup__input-wrap">
+                    <input type="text" class="popup__input" name="link" placeholder="Ссылка на картинку" required
+                        pattern="^https?:\/\/([\w-]+\.)+(\w+).+?">
+                    <div class="popup__error"></div>
+                </div>
+                <button type="submit" class="popup__button">Сохранить</button>
+            </form>
+        </div>
+    </div>
     <template class="card-template">
         <li class="elements__list-item">
             <img class="elements__image" alt="image">
             <div class="elements__remove"></div>
             <div class="elements__container">
                 <h2 class="elements__text"></h2>
-                <button class="elements__like-container"></button>
+                <div class="elements__like">
+                    <button class="elements__like-container"></button>
+                    <div class="elements__like-count">0</div>
+                </div>
             </div>
         </li>
     </template>
